// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Collection Horizontal render 1`] = `
<ul
  class="horizontal css-1e5kp6i"
  data-testid="timeline-collection"
>
  <li
    class="horizontal  css-uqbp81"
    width="250"
  >
    <div
      class="horizontal css-16eji5t"
      data-testid="timeline-item"
    >
      <div
        class="css-1p18t0t"
      >
        <div
          class="horizontal in-active css-1yzc5y5"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="horizontal undefined css-lzd26m"
        data-testid="timeline-title"
      >
        <div
          class=" css-x77ob3"
          title="June 28, 1914 June 28, 1914 June 28, 1914June 28, 1914"
        >
          June 28, 1914 June 28, 1914 June 28, 1914June 28, 1914
        </div>
      </div>
    </div>
  </li>
  <li
    class="horizontal  css-uqbp81"
    width="250"
  >
    <div
      class="horizontal css-16eji5t"
      data-testid="timeline-item"
    >
      <div
        class="css-1p18t0t"
      >
        <div
          class="horizontal in-active css-1yzc5y5"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="horizontal undefined css-lzd26m"
        data-testid="timeline-title"
      >
        <div
          class=" css-x77ob3"
          title="July 28, 1914"
        >
          July 28, 1914
        </div>
      </div>
    </div>
  </li>
  <li
    class="horizontal  css-uqbp81"
    width="250"
  >
    <div
      class="horizontal css-16eji5t"
      data-testid="timeline-item"
    >
      <div
        class="css-1p18t0t"
      >
        <div
          class="horizontal in-active css-1yzc5y5"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="horizontal undefined css-lzd26m"
        data-testid="timeline-title"
      >
        <div
          class=" css-x77ob3"
          title="August 1–28, 1914"
        >
          August 1–28, 1914
        </div>
      </div>
    </div>
  </li>
  <li
    class="horizontal  css-uqbp81"
    width="250"
  >
    <div
      class="horizontal css-16eji5t"
      data-testid="timeline-item"
    >
      <div
        class="css-1p18t0t"
      >
        <div
          class="horizontal in-active css-1yzc5y5"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="horizontal undefined css-lzd26m"
        data-testid="timeline-title"
      >
        <div
          class=" css-x77ob3"
          title="September 6, 1914"
        >
          September 6, 1914
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Test Collection Tree render 1`] = `
<ul
  class="tree css-1e5kp6i"
  data-testid="timeline-collection"
>
  <li
    class="tree  css-uqbp81"
    width="250"
  >
    <div
      class="tree css-16eji5t"
      data-testid="timeline-item"
    >
      <div
        class="css-1p18t0t"
      >
        <div
          class="tree in-active css-1yzc5y5"
          data-testid="timeline-circle"
        />
      </div>
    </div>
  </li>
  <li
    class="tree  css-uqbp81"
    width="250"
  >
    <div
      class="tree css-16eji5t"
      data-testid="timeline-item"
    >
      <div
        class="css-1p18t0t"
      >
        <div
          class="tree in-active css-1yzc5y5"
          data-testid="timeline-circle"
        />
      </div>
    </div>
  </li>
  <li
    class="tree  css-uqbp81"
    width="250"
  >
    <div
      class="tree css-16eji5t"
      data-testid="timeline-item"
    >
      <div
        class="css-1p18t0t"
      >
        <div
          class="tree in-active css-1yzc5y5"
          data-testid="timeline-circle"
        />
      </div>
    </div>
  </li>
  <li
    class="tree  css-uqbp81"
    width="250"
  >
    <div
      class="tree css-16eji5t"
      data-testid="timeline-item"
    >
      <div
        class="css-1p18t0t"
      >
        <div
          class="tree in-active css-1yzc5y5"
          data-testid="timeline-circle"
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`Test Collection Vertical render 1`] = `
<ul
  class="vertical css-1e5kp6i"
  data-testid="timeline-collection"
>
  <li
    class="vertical  css-uqbp81"
    width="250"
  >
    <div
      class="vertical css-16eji5t"
      data-testid="timeline-item"
    >
      <div
        class="css-1p18t0t"
      >
        <div
          class="vertical in-active css-1yzc5y5"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="vertical css-1t5nnqc"
      >
        <div
          class="vertical undefined css-lzd26m"
          data-testid="timeline-title"
        >
          <div
            class=" css-x77ob3"
            title="June 28, 1914 June 28, 1914 June 28, 1914June 28, 1914"
          >
            June 28, 1914 June 28, 1914 June 28, 1914June 28, 1914
          </div>
        </div>
        <div
          class=" css-74e5rn"
          mode="VERTICAL"
        >
          <span
            class="css-c1e5f8"
          >
            Archduke Franz Ferdinand of Austria and his wife, Sophie, are assassinated by a Bosnian Serb nationalist in Sarajevo.
          </span>
          <div
            class="show-less css-or8e72"
          />
          <span
            class="show-more css-1rml49d"
            role="button"
          >
            ...
          </span>
        </div>
      </div>
    </div>
  </li>
  <li
    class="vertical  css-uqbp81"
    width="250"
  >
    <div
      class="vertical css-16eji5t"
      data-testid="timeline-item"
    >
      <div
        class="css-1p18t0t"
      >
        <div
          class="vertical in-active css-1yzc5y5"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="vertical css-1t5nnqc"
      >
        <div
          class="vertical undefined css-lzd26m"
          data-testid="timeline-title"
        >
          <div
            class=" css-x77ob3"
            title="July 28, 1914"
          >
            July 28, 1914
          </div>
        </div>
        <div
          class=" css-74e5rn"
          mode="VERTICAL"
        >
          <span
            class="css-c1e5f8"
          >
            World War I begins when Austria-Hungary declares war on Serbia.
          </span>
          <div
            class="show-less css-or8e72"
          />
          <span
            class="show-more css-1rml49d"
            role="button"
          >
            ...
          </span>
        </div>
      </div>
    </div>
  </li>
  <li
    class="vertical  css-uqbp81"
    width="250"
  >
    <div
      class="vertical css-16eji5t"
      data-testid="timeline-item"
    >
      <div
        class="css-1p18t0t"
      >
        <div
          class="vertical in-active css-1yzc5y5"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="vertical css-1t5nnqc"
      >
        <div
          class="vertical undefined css-lzd26m"
          data-testid="timeline-title"
        >
          <div
            class=" css-x77ob3"
            title="August 1–28, 1914"
          >
            August 1–28, 1914
          </div>
        </div>
        <div
          class=" css-74e5rn"
          mode="VERTICAL"
        >
          <span
            class="css-c1e5f8"
          >
            Germany declares war on Russia, France, and Belgium. Britain declares war on Germany.
    Austria declares war on Russia. Montenegro declares war on Austria. France declares war on Austria.
    Britain declares war on Austria. Montenegro declares war on Germany. Japan declares war on Germany. Austria declares war on Belgium.
          </span>
          <div
            class="show-less css-or8e72"
          />
          <span
            class="show-more css-1rml49d"
            role="button"
          >
            ...
          </span>
        </div>
      </div>
    </div>
  </li>
  <li
    class="vertical  css-uqbp81"
    width="250"
  >
    <div
      class="vertical css-16eji5t"
      data-testid="timeline-item"
    >
      <div
        class="css-1p18t0t"
      >
        <div
          class="vertical in-active css-1yzc5y5"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="vertical css-1t5nnqc"
      >
        <div
          class="vertical undefined css-lzd26m"
          data-testid="timeline-title"
        >
          <div
            class=" css-x77ob3"
            title="September 6, 1914"
          >
            September 6, 1914
          </div>
        </div>
        <div
          class=" css-74e5rn"
          mode="VERTICAL"
        >
          <span
            class="css-c1e5f8"
          >
            First Battle of the Marne begins. The Germans had advanced to within 30 miles of Paris, but over the next two days, the French are reinforced by 6,000 infantrymen who are transported to the front by hundreds of taxis.
      The Germans dig in north of the Aisne River, and the trench warfare that is to typify the Western Front for the next four years begins.
          </span>
          <div
            class="show-less css-or8e72"
          />
          <span
            class="show-more css-1rml49d"
            role="button"
          >
            ...
          </span>
        </div>
      </div>
    </div>
  </li>
</ul>
`;
